# zephyr

./: MAINTAINERS.yml  west.yml
boards/ambiq/apollo3_evb/: apollo3_evb.dts
boards/ambiq/apollo3p_evb/: apollo3p_evb.dts
boards/ambiq/apollo4p_blue_kxr_evb/: apollo4p_blue_kxr_evb.dts
boards/nordic/nrf54h20dk/: nrf54h20dk_nrf54h20_cpuapp.dts
boards/nxp/mimxrt1170_evk/: mimxrt1170_evk-pinctrl.dtsi  mimxrt1170_evk_mimxrt1176_cm7_B.overlay
boards/silabs/efr32_radio/: efr32_radio_efr32mg12p432f1024gl125.dts
boards/silabs/efr32_thunderboard/: efr32bg22_brd4184.dtsi
boards/silabs/efr32xg24_dk2601b/: efr32xg24_dk2601b.dts
cmake/modules/: version.cmake
doc/_extensions/zephyr/: domain.py
doc/releases/: migration-guide-3.6.rst  migration-guide-3.7.rst  release-notes-3.6.rst  release-notes-3.7.rst
drivers/bluetooth/hci/: Kconfig  Kconfig.infineon  hci_ifx_cyw208xx.c
drivers/gpio/: gpio_pcal64xxa.c
drivers/led_strip/: Kconfig.ws2812  ws2812_i2s.c  ws2812_spi.c
drivers/modem/: modem_cellular.c
drivers/rtc/: CMakeLists.txt  Kconfig  rtc_rv3028.c
drivers/sensor/lsm6dsv16x/: Kconfig  lsm6dsv16x.c
drivers/spi/: Kconfig.ambiq
dts/arm/ambiq/: ambiq_apollo3_blue.dtsi  ambiq_apollo3p_blue.dtsi  ambiq_apollo4p_blue.dtsi
dts/arm/nordic/: nrf52840.dtsi  nrf54l15_cpuapp.dtsi
dts/arm/nxp/: nxp_rw6xx_common.dtsi
include/zephyr/: devicetree.h  kernel.h
include/zephyr/bluetooth/: conn.h  (+2 more)
modules/mbedtls/: Kconfig.tls-generic
subsys/logging/: log_core.c
subsys/modem/: modem_cmux.c
subsys/zbus/: zbus.c
tests/subsys/llext/hello_world/: CMakeLists.txt
(+206 files in other folders)
